--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@react-native-community/masked-view": "^0.1.10",
     "expo-image-picker": "^8.4.0",
     "firebase": "^7.15.5",
+    "jetifier": "^1.6.6",
     "native-base": "^2.13.13",
     "react": "16.13.1",
     "react-native": "0.63.2",
@@ -21,15 +21,11 @@
     "react-native-datepicker": "^1.7.2",
     "react-native-dropdown-picker": "^3.1.11",
     "react-native-elements": "^2.0.4",
-    "react-native-gesture-handler": "^1.7.0",
     "react-native-image-picker": "^0.28.0",
     "react-native-indicator": "^1.2.0",
     "react-native-indicators": "^0.17.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.1",
     "react-native-modal": "^11.5.6",
-    "react-native-reanimated": "^1.10.1",
-    "react-native-safe-area-context": "^3.1.1",
-    "react-native-screens": "^2.9.0",
     "react-native-super-grid": "^4.0.2",
     "react-native-table-component": "^1.2.1",
     "react-native-unimodules": "^0.10.1",
